<resources>
    <string name="app_name">Feast Finder</string>
    <string name="feast_finder">Feast Finder</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="designed_by_n_feast_finder">Designed By\n Feast Finder</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals\n at Home</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_token">AIzaSyA1RZa8NkX4nY3rZfizhz-Avhg6cYWLBck\n</string>
</resources>